web-infras/parser/tests/fixtures/babel/core/scope/undecl-export-block/output.txt
[SyntaxError]: Export variable is not defined. (4,10)
4|export { encrypt }
 |        ^
